svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: primemob-svc
spec:
  selector:
    app: primemob
  ports:
    - protocol: TCP
      port: 8050
      targetPort: 8050
